plugins {
    id 'java'
    id 'java-library'
    id 'io.freefair.lombok' version '8.10'
    id 'io.spring.dependency-management' version '1.1.6'
}

group = 'me.goodt'
version = '3.0.0-SNAPSHOT'

base {
    archivesName = 'vkpht-main'
}

java {
    modularity.inferModulePath = true
}

repositories {
    maven {
        url 'https://vkpht-nexus.goodt.me/repository/maven-public/'
        credentials {
            username 'maven_read'
            password '+XDBmyl|dJ|Ku-#]8#'
        }
    }
    mavenLocal()
}

ext {
    springBootVersion = '3.3.4'
    postgreJDBCDriverVersion = '42.7.4'
    queryDslVersion = '6.8'
}

subprojects {
    apply plugin: 'java'
    apply plugin: 'java-library'
    apply plugin: 'io.spring.dependency-management'
    apply plugin: 'io.freefair.lombok'

    java {
        sourceCompatibility = JavaVersion.VERSION_21
        targetCompatibility = JavaVersion.VERSION_21
    }



    repositories {
        maven {
            url 'https://vkpht-nexus.goodt.me/repository/maven-public/'
            credentials {
                username 'maven_read'
                password '+XDBmyl|dJ|Ku-#]8#'
            }
        }
        mavenLocal()
    }

    dependencies {
        implementation 'org.springframework.boot:spring-boot-starter'
        implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
        implementation 'org.liquibase:liquibase-core'
        implementation "org.postgresql:postgresql:$postgreJDBCDriverVersion"
        implementation 'org.apache.commons:commons-lang3:3.17.0'
    }

    dependencyManagement {
        imports {
            mavenBom("org.springframework.boot:spring-boot-dependencies:$springBootVersion")
        }
    }

}